# operator-wazuh

./: README.md  sonar-project.properties
.github/workflows/: build.yml  sonar.yml
example/: simple.yaml
manifests/: wazuh-cluster.yaml  wazuh-operator.yaml
wazuh-operator/: Cargo.toml  Dockerfile
wazuh-operator/src/: errors.rs  main.rs
wazuh-operator/src/controller/: error_handler.rs  finalizer.rs  handler.rs  mod.rs  reconcile_wazuh.rs
wazuh-operator/src/crds/: mod.rs  wazuh_cluster.rs
wazuh-operator/src/models/: cluster_ref.rs  crd_action.rs  data.rs  mod.rs
wazuh-operator/src/services/: determine_action.rs  mod.rs  nginx_deployment.rs
